--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,50 @@ django = "*"
 gunicorn = "*"
 django-heroku = "*"
 rest_framework = "*"
+asn1crypto==0.22.0
+cachetools==2.0.1
+certifi==2017.7.27.1
+cffi==1.10.0
+chardet==3.0.4
+click==6.7
+conda==4.3.30
+cryptography==2.0.3
+cycler==0.10.0
+dialogflow==0.1.0
+Flask==0.12.2
+Flask-SQLAlchemy==2.3.2
+google-api-core==0.1.3
+google-auth==1.2.1
+googleapis-common-protos==1.5.3
+grpcio==1.8.3
+idna==2.6
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+matplotlib==2.1.0
+mongoengine==0.15.0
+numpy==1.13.3
+opencv-python==3.3.0.10
+protobuf==3.5.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycosat==0.6.2
+pycparser==2.18
+pymongo==3.6.1
+pyOpenSSL==17.2.0
+pyparsing==2.2.0
+PySocks==1.6.7
+python-dateutil==2.6.1
+pytz==2017.2
+requests==2.18.4
+rsa==3.4.2
+ruamel-yaml==0.11.14
+six==1.11.0
+SQLAlchemy==1.1.15
+tornado==4.5.2
+urllib3==1.22
+Werkzeug==0.12.2
+
 
 
 
