--- a/Pipfile
+++ b/Pipfile
@@ -10,10 +10,10 @@ django = "*"
 gunicorn = "*"
 django-heroku = "*"
 rest_framework = "*"
-asn1crypto==0.22.0
-cachetools==2.0.1
-certifi==2017.7.27.1
-cffi==1.10.0
+asn1crypto= 0.22.0
+cachetools= 2.0.1
+certifi= 2017.7.27.1
+cffi= 1.10.0
 chardet==3.0.4
 click==6.7
 conda==4.3.30
