--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ google-api-core==0.1.3
 google-auth==1.2.1
 googleapis-common-protos==1.5.3
 grpcio==1.8.3
+gunicorn==19.7.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.10
